# DTBox

./: .env  .gitignore  .replit  Cargo.toml  README.md  TODO.md  Todo.md  build.rs  default.json  default.toml  init.sql  package.json
.github/workflows/: ci.yml  main.yml  release.yml
.sqlx/: query-1639def01bdf9ac94145e5263fa662fe439b33741cae4c32499258f4b9410342.json  query-24e810dbb68f6b1e131b59ee58d14dfb182f870b60f45382b33b8f37d453f35f.json  query-3eb46ec339c4212886447bcecc8b17b054aa75f972d5131585e1f9fabfe1a0e5.json  query-5b3c56f48c42dedd68eb48174a053301a4f27fc29e79757500ae7e40729be556.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-876484ccad2a9947ca297259bab0994f95d918bc974fdd86400aef0abb0fb94f.json  query-90cef99607343df8ce0f4515c788e07ea378c520c46002bfc15467c29e3d1946.json  query-bed4b0d640addecf574ef840433b88329df8d0803fc81d3a9d8aaba6f72475e6.json  query-cb0cf5062d66c5c6b379939980969f9b3acb92bdeada61fb905ee072d53de223.json  query-d2f392fd18bfec1f7bf9b3d5730879aac00f2c032028add4c389ee46e5086a56.json  query-d46962924605d1af9915e41619ba3087cd763055f56ecab0acd5729cf257cc56.json
backend/: .gitignore  Cargo.toml  README.md  config.example.toml  default.json
backend/src/: lib.rs  main.rs
backend/src/api/: auth.rs  handler.rs  mod.rs  response.rs  user.rs
backend/src/api/market/: finviz.rs  integrations.rs  mod.rs
backend/src/api/source/: mod.rs
backend/src/api/source/book_view/: cboe.rs
backend/src/api/source/calendar/economy/: finviz.rs
backend/src/api/source/calendar/ipo/: scoop.rs
backend/src/api/source/calendar/spac/: research.rs
backend/src/api/source/candlestick/: finviz.rs
backend/src/api/source/event/: finviz.rs
backend/src/api/source/quote/: finviz.rs  nasdaq.rs
backend/src/api/source/screener/: finviz.rs
backend/src/api/source/utils/time_stamp/: akamai.rs
backend/src/api/source/utils/translate/: google.rs
backend/src/api/users/: change.rs  exists.rs  info.rs  login.rs  logout.rs  mod.rs  refresh.rs  register.rs
backend/src/app/: init.rs
backend/src/auth/: mod.rs
backend/src/config/: mod.rs
backend/src/database/: mod.rs
backend/src/database/entity/: mod.rs  refresh_token.rs  stock.rs  user.rs
backend/src/error/: mod.rs
backend/src/logger/: mod.rs
backend/src/middleware/: mod.rs
backend/src/repository/: mod.rs  refresh_token.rs  stock.rs  user.rs
backend/src/service/: auth.rs  mod.rs  user.rs
backend/src/service/market/: finviz.rs  integrations.rs  mod.rs
backend/src/state/: mod.rs
backend/src/utils/: error.rs  jwt.rs  mod.rs  settings.rs  translate.rs
core/: Cargo.toml
core/src/: cboe.rs  lib.rs  nasdaq.rs
core/src/cboe/: market.rs  symbal.rs  symbol.rs
core/src/finviz/: screener.rs
core/src/utils/: time.rs  translate.rs
crates/assets/: Cargo.toml
crates/assets/src/: lib.rs
crates/data/: Cargo.toml
crates/http_client/: Cargo.toml
crates/http_client/src/: lib.rs
crates/request/: Cargo.toml
crates/request/src/: lib.rs
crates/ui/: Cargo.toml
crates/ui/src/: app_state.rs  assets.rs  lib.rs
crates/ui/src/components/: time.rs
crates/ui/src/mac/: app.rs  dtbox.rs  window_title_bar.rs
dtbox_core/: Cargo.toml
dtbox_core/src/: lib.rs
dtbox_ui/: Cargo.toml
dtbox_ui/src/mac/: app.rs  utils.rs
dtbox_ui/src/windows/: window_title_bar.rs
frontend/: .cta.json  API.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend-old/: .gitignore  vite.config.ts
frontend-old/app/: root.tsx  routes.ts
frontend/app/: app.css  root.tsx  routes.ts
frontend/src/: App.tsx  index.css  main.tsx  routeTree.gen.ts  theme.ts
frontend/xxx/src/: App.tsx  (+1 more)
src/: App.tsx  App.vue  Main.ts  app.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: futu.rs  lib.rs  main.rs
src/api/: mod.rs  register.rs  response.rs  router.rs
src/app/: api.rs  error.rs  init.rs  mod.rs  router.rs  settings.rs  state.rs
src/components/: Time.ts  TimeWindowButton.ts  windowtitlebar.rs
src/data_source/: mod.rs
src/database/: book_view.rs  manager.rs  mod.rs  stocks.rs  user.rs
src/fetch/: market.rs  nasdaq.rs
src/plugins/: Router.ts
src/source/: mod.rs
src/utils/: Config.ts  error.rs  jwt.rs  log.rs  market.rs  mod.rs  settings.rs  token.rs  tool.rs
src/views/: Charts.tsx  FinvizScreener.ts  FinvizScreener.tsx  IPOCalendar.tsx  MacroCalendar.tsx  SPACCalendar.tsx  Settings.ts  TimeWindow.ts  TimeWindow.tsx
src/window/: mainwindow.rs
src/windows/: mainwindow.rs
src1/: App.ts  Main.ts
src1/api/: Finviz.ts
src1/assets/: App.css
src1/components/: Time.ts  TimeWindowButton.ts
src1/plugins/: DTBox.ts  Router.ts
src1/utils/: Config.d.ts  Config.ts  Tool.ts
src1/views/: FinvizScreener.ts  IPOCalendar.ts  Settings.ts
ui/: Cargo.toml  main.slint  window.slint
ui/src/: lib.rs  main.rs
web/: .gitignore  README.md  components.d.ts  index.html  package.json  vite.config.js  vite.config.ts
web/src/: App.vue  main.ts  router.ts
web/static/: index.html
(+202 files in other folders)
