[package]
name = "DTBox"
version = "0.1.0-beta.1"
edition = "2024"

[lib]
name = "dtbox_lib"

[dependencies]
tower-http = { version = "0.6.6", features = ["fs"] }
tokio = { version = "1.48.0", features = ["full"] }
axum = "0.8.6"
sqlx = { version = "0.8.6", features = ["runtime-tokio","postgres","chrono"] }
anyhow = "1.0.100"
toml = "0.9.8"
futures = "0.3.31"
rand = "0.9.2"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde_json = "1.0.145"
csv = "1.4.0"
serde = "1.0.228"
scraper = "0.24.0"
argon2 = "0.5.3"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
