[package]
name = "DTBox"
version = "0.1.0-beta.2"
edition = "2024"

[lib]
name = "dtbox"

[dependencies]
anyhow = "1.0.101"
argon2 = "0.5.3"
axum = "0.8.8"
chrono = "0.4.43"
reqwest = { version = "0.13.2", features = ["json"] }
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version="1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
rand = "0.8.5"
tracing-subscriber = { version="0.3.22", default-features = false, features = [ "std", "fmt", "time", "local-time", "env-filter" ] }
cookie = "0.18.1"
uuid = { version = "1.20.0",features = ["v4"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
once_cell = "1.21.3"
