[package]
name = "DTBox"
version = "0.1.0-beta.4"
edition = "2024"

[lib]
name = "dtbox"
path = "src/lib.rs"

[[bin]]
name = "dtbox-server"
path = "src/main.rs"

[dependencies]
# Web Framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "limit"] }
hyper = { version = "1.0", features = ["full"] }

# Async Runtime
tokio = { version = "1.40", features = ["full"] }
tokio-util = "0.7"

# Database
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-json"] }
serde_json = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Authentication
jsonwebtoken = "9"
argon2 = { version = "0.5", features = ["password-hash"] }
rand = "0.8"
uuid = { version = "1.10", features = ["v4", "serde"] }

# HTTP Client
reqwest = { version = "0.12", features = ["json", "cookies"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Configuration
config = "0.15"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }
tracing-appender = "0.2"

# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Validation
validator = { version = "0.19", features = ["derive"] }

# Rate Limiting
governor = "0.10"

# Utilities
once_cell = "1.20"
async-trait = "0.1"

# CSV Parsing
csv = "1.3"

# HTML Parsing
scraper = "0.23"

[dev-dependencies]
tokio-test = "0.4"
