[package]
name = "DTBox"
version = "0.1.0"
edition = "2024"

[lib]
name = "dtbox_ui"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json"] }
dtbox_core = { path = "../dtbox_core" }
gpui = { version = "*" }
gpui-component = { git = "https://github.com/longbridge/gpui-component.git" }
