[package]
name = "DTBox"
version = "0.1.0"
edition = "2021"

[lib]
name = "dtbox_ui"

[dependencies]
dtbox_core = { path = "../dtbox_core" }
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json"] }
gpui = { version = "*" }
gpui-component = { git = "https://github.com/longbridge/gpui-component.git" }
env_logger = "0.11.8"
log = "0.4.28"
