[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
request = { path = "../request" }
http_client = { path = "../http_client" }
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json"] }
gpui = "0.2.2"
gpui-component = "0.3.1"
env_logger = "0.11.8"
log = "0.4.28"
sqlx = { version="0.8.6",features=[] }
anyhow = "1.0.100"
rust-embed =  "8.9.0"
chrono = "0.4.42"
